syntax = "proto3";

package mephi.exercise.grpc;

import "google/protobuf/empty.proto";

message AdviceRequest {
  string login = 1;
}

message AdviceResponse {
  string message = 1;
}

message AuthRequest {
  string login = 1;
}

message AuthResponse {
  string status = 1;
}

message TimeResponse {
  string current_timestamp = 1;
}

service AdviceService {
  rpc getAdviceForUser (AdviceRequest) returns (AdviceResponse);
}

service AuthService {
  rpc checkAuthByLogin (AuthRequest) returns (AuthResponse);
}

service TimeService {
  rpc getCurrentTime(google.protobuf.Empty) returns (TimeResponse);
}
